import org.flywaydb.gradle.task.FlywayMigrateTask

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.5'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.flywaydb.flyway' version '9.22.0'
}

group = 'br.hallel.relational.api'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    maven {
        url "https://maven.google.com"
    }
    mavenCentral()
    jcenter()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.modelmapper:modelmapper:3.0.0'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'com.google.cloud:google-cloud-storage:2.27.0'
    implementation 'com.google.api-client:google-api-client:2.2.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'
    implementation 'com.auth0:java-jwt:3.18.3'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
    runtimeOnly 'org.postgresql:postgresql'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    implementation 'com.google.api-client:google-api-client:2.5.0'
    implementation 'com.google.oauth-client:google-oauth-client:1.34.1'
    implementation 'com.google.http-client:google-http-client-gson:1.43.3'
    implementation 'com.google.http-client:google-http-client-jackson2:1.43.3'
    implementation 'com.github.librepdf:openpdf:1.3.30'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'com.mercadopago:sdk-java:2.2.0', {

        exclude group: 'com.google.collections', module: 'google-collections'
    }
}

flyway {
    url = 'jdbc:postgresql://localhost:5432/hallel-db'
    user = 'postgres'
    password = 'root'
    locations = ['filesystem:src/main/resources/db/migration']
}

tasks.register("flywaymigrate", FlywayMigrateTask)

tasks.named('test') {
    useJUnitPlatform()
}
